--- a/main/templates/main/show.html
+++ b/main/templates/main/show.html
@@ -20,10 +20,18 @@
         {% for item in items %}
         <li>   
             {{ item.text }}
-            <button type="submit">Concluído</button>
             
+        <form action="{% url 'put-item' item.id %}" method="post" style="display: inline;"></form>
+            {% csrf_token %}
+            {% if item.complete %}
+                <button type="submit">Concluído</button>
+            {% else %}
+                <button type="submit">Pendente</button>
+            {% endif %}
+        </form>
+
             <form method="post" action="{% url 'deletar_item' item.todo.id todo_id %}" method="post">
-                {% csrf_token %}
+            {% csrf_token %}
             <button type="submit">Excluir</button>
             </form>
         </li>
